--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Welcome to my home</h1>
     <img src="photo.jpg" width=200px height=250px/>
     <h2>About</h2>
-    <p>I am a 14 year old student in <a href="www.dhs.sg"> Dunman High School, Singapore</p>
+    <p>I am a 14 year old student in <a href="http://www.dhs.sg"> Dunman High School, Singapore</p>
     <h2>Interests</h2>
     <p>I am interested in watching videos , sleeping and eating. One of the games i play the most now is vainglory.</p>
     <h2>Projects</h2>
